--- a/nirmaan-dapp/index.html
+++ b/nirmaan-dapp/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -42,6 +42,52 @@
       <input placeholder="Contract ID" id="contractId" />
       <button onclick="verifyWork()">Verify Work</button>
       <button onclick="raiseDispute()">Raise Dispute</button>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
+    <script src="app.js"></script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nirmaan DApp</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body onload="loadDeployedAddress()">
+    <div id="app">
+      <h1>Nirmaan DApp</h1>
+
+      <h2>🔗 Wallet Connection</h2>
+      <button onclick="connectWallet()">Connect / Reconnect Wallet</button>
+      <p id="walletAddress">Not connected</p>
+
+      <h2>🛠 Contract Connection</h2>
+      <input placeholder="Contract Address" id="contractAddress" />
+      <button onclick="connectContract()">Connect to Contract</button>
+
+      <h2>👥 Registration</h2>
+      <button onclick="register()">Register Current Wallet</button>
+      <input placeholder="Check Address" id="checkAddress" />
+      <button onclick="checkRegistered()">Check if Registered</button>
+      <p id="regStatus"></p>
+
+      <h2>🏗 Employer Actions</h2>
+      <input placeholder="Employee Address" id="employeeAddress" />
+      <input placeholder="Token Address" id="tokenAddress" />
+      <button onclick="createWorkContract()">Create Work Contract</button>
+
+      <h2>🔨 Work Management</h2>
+      <input placeholder="Contract ID" id="contractId" />
+      <button onclick="verifyWork()">Employer: Verify Work</button>
+      <button onclick="raiseDispute()">Employee: Raise Dispute</button>
+
+      <h2>📃 Active Contracts</h2>
+      <button onclick="listContracts()">List All Contracts</button>
+      <div id="contractList"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.2/dist/ethers.umd.min.js"></script>
