Fixed incremental payments

--- a/nirmaan-dapp/index.html
+++ b/nirmaan-dapp/index.html
@@ -43,6 +43,8 @@
       <div class="row">
         <input id="employeeAddress" type="text" placeholder="Employee Address">
         <input id="tokenAddress" type="text" placeholder="Token Address">
+        <input id="numDays" type="text" placeholder="Number of Days">
+        <input id="dailyWage" type="text" placeholder="Daily Wage">
         <button id="createContractBtn" onclick="createWorkContract()">Create Work Contract</button>
       </div>
       <div id="currentContractStatus" class="status-box"></div>
